fix: add scrollbar-gutter property for stable layout

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,10 @@
 	}
 }
 
+html {
+	scrollbar-gutter: stable;
+}
+
 body {
 	font-family: "Sentient-Variable", serif;
 }
